--- a/pokemon-teams-frontend/styles.css
+++ b/pokemon-teams-frontend/styles.css
@@ -4,7 +4,7 @@ body {
   }
   
   header {
-    background-color: #4caf50;
+    background-color: red;
     margin: 0 auto;
     height: 50px;
   }
@@ -12,6 +12,7 @@ body {
   header h2 {
     padding: 10px;
     margin: 0;
+    color: white;
   }
   
   main {
